tests/cases/generics/errors/generic-method-uninferred.ari
struct Box[T] {
  value: T,
}

impl[T] Box[T] {
  fn make[U](self) -> Box[U] {
    Box { value: 0 }
  }
}

fn main() -> i64 {
  let value = Box { value: true }.make();
  0
}
